# compiler-project

./: .gitignore  README.md  ast.dot  ast.json  full_program.asm  pyproject.toml  seven_int_args.asm  symbols.json  test_program  результаты.md
docs/: grammar.md  language_spec.md
examples/: hello.src  test_ir.src  with_macros.src
src/: cli.py
src/codegen/: __init__.py  abi.py  control_flow_generator.py  expression_generator.py  label_manager.py  register_allocator.py  stack_frame.py  x86_generator.py
src/ir/: __init__.py  basic_block.py  control_flow.py  ir_generator.py  ir_instructions.py  output.py
src/lexer/: __init__.py  scanner.py  token.py
src/parser/: __init__.py  ast.py  codec.py  dot.py  errors.py  grammar.txt  ll1_tables.py  parser.py  pretty.py
src/preprocessor/: __init__.py  preprocessor.py
src/runtime/: runtime.asm
src/semantic/: __init__.py  analyzer.py  errors.py  output.py  symbol_table.py  type_system.py
src/utils/: __init__.py  errors.py
tests/: __init__.py
tests/codegen/: test_pipeline.py  test_register_allocator.py  test_sprint6_codegen.py  test_x86_generation.py
tests/ir/: __init__.py  golden_runner.py  test_control_flow.py  test_expressions.py  test_functions.py  test_golden.py  test_integration.py
tests/lexer/invalid/: test_identifier_too_long.src  (+18 more)
tests/ll1/: conflict_grammar.expected  conflict_grammar.txt  invalid_grammar.expected  invalid_grammar.txt
tests/preprocessor/: __init__.py  test_preprocessor.py
tests/semantic/: test_symbol_table.py
tests/test_runner/: __init__.py  __main__.py  runner.py
(+131 files in other folders)
